<resources>

    <string name="appti">Pucho</string>
    <string name="app_name">Auth</string>
    <string name="facebook_app_ID">339756553026583</string>
    <string name="enterphonenumber">Enter Your Phone No</string>
    <string name="selectcountry">Select country</string>
    <string name="addpost">Add Post</string>
    <string name="chooselanguage">Choose Language</string>
    <string name="logout">Logout</string>
    <string name="sending_sms">We\'re sending an sms to</string>
    <string name="needto">You Need To Logout</string>
    <string name="inprogress">Verification in\nprogress</string>
    <string name="verified">Verification successful</string>
    <string name="failed">Verification failed</string>
    <string name="entercode">Please enter the code you received</string>
    <string name="welcomeuser">Welcome User!!!</string>
    <string name="loginfb">Login With Facebook</string>
    <string name="loginno">Login WIth Phone no</string>
    <string name="phoneno">Phone No</string>
    <string name="password">Password</string>
    <string name="password1">Enter Password</string>
    <string name="password2">Re-enter Password</string>
    <string name="submit">Submit</string>
    <string name="returnwel">Return To Post Activity</string>
    <string name="login">Login</string>
    <string name="register">Register Your Number</string>
    <string name="countrycode">Country Code</string>
    <string name="enterccode">Enter OTP</string>
    <string name="verifyandwait">Send OTP</string>
    <string name="verify">Verify OTP</string>
    <string name="createuser">Create User</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cantedit">You can overwrite only what u have posted</string>
    <string name="info">App Info</string>
    <string name="ok">OK</string>
    <string name="infotitle">"How to Use the APP"</string>
    <string name="infomessage1"> Sign into the app with any of the three methods</string>
    <string name="infomessage2"> phone number should be in international format while logging in </string>
    <string name="infomessage3"> you can see a list of posts already done by the users </string>
    <string name="infomessage4">  click on a post title to view it </string>
    <string name="infomessage5"> long press on a post title to edit if you  have posted it </string>
    <string name="infomessage6"> you can add a new post by clicking the add icon </string>
    <string name="infomessage7"> you can choose language or just logout in settings </string>
    <string name="languagesavail1"> English </string>
    <string name="languagesavail2"> Hindi </string>
    <string name="languagesavail3"> French </string>
    <string name="languagesavail4"> German </string>
    <string name="languagesavail5"> Italian </string>
    <string name="languagesavail6"> Japanese </string>
    <string name="languagesavail7"> Korean </string>
    <string name="languagesavail8"> Arabic </string>
    <string name="languagesavail9"> Romanian </string>
    <string name="passno">Passwords does not match</string>
    <string name="userde">User does not exist</string>
    <string name="wrong">Wrong Password</string>
    <string name="successver">successfully verified</string>
    <string name="tryaga">Try again</string>
</resources>