<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.suniltg.auth.Phone_Register"
    android:background="#1647d8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneno"
        android:id="@+id/textView6"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/countrycode"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/mobile"
        android:layout_marginTop="77dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/mobile"
        android:layout_above="@+id/textView6"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/countrycode"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifyandwait"
        android:id="@+id/button3"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/mobile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enterccode"
        android:id="@+id/textView8"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="73dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/verifcode"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toEndOf="@+id/textView8" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView8" />

</RelativeLayout>
