<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.suniltg.auth.MainActivity"
    android:background="@color/com_facebook_button_send_background_color">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginno"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|bottom" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@mipmap/puchoimage7"
            android:layout_gravity="center_horizontal|top"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true" />

        <com.google.android.gms.common.SignInButton android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/googlesignb"
            android:layout_gravity="center"
            android:layout_above="@+id/login_button"
            android:layout_centerHorizontal="true"></com.google.android.gms.common.SignInButton>

        <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:text="@string/loginfb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeuser"
            android:id="@+id/textView2"
            android:textSize="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


</RelativeLayout>
