<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.suniltg.auth.EditActivity"
    android:gravity="bottom"
    android:background="#1647d8">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/post_titleee"
            android:layout_below="@+id/textView11"
            android:layout_alignParentStart="true" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:id="@+id/scrollView1"
            android:fillViewport="false"
            android:layout_below="@+id/textView12"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/returnbb">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/post_desccc"
                android:layout_alignTop="@+id/scrollView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />
        </ScrollView>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/returnwel"
            android:id="@+id/returnbb"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:text="@string/title"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:textSize="@dimen/abc_dialog_padding_material" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/textView12"
            android:textStyle="bold"
            android:textSize="@dimen/abc_dialog_padding_material"
            android:layout_below="@+id/post_titleee"
            android:layout_alignParentStart="true"
            android:layout_marginTop="86dp" />


    </RelativeLayout>
</LinearLayout>
